--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@types/react-dom": "18.2.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.1",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
