--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "gsap": "^3.12.2",
+    "gsap-trial": "^3.12.2",
+    "locomotive-scroll": "^4.1.4",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
